# pymnpbem_simulation

./: .gitignore  HELP.md  README.en.md  README.md  autorun.sh  compare_rod.py  compare_sphere.py  master.py  master.sh  pyproject.toml  requirements.txt  run_postprocess.py  run_simulation.py  test_compatibility.py
docs/: ARCHITECTURE.md  CLI_GUIDE.md  CLI_REFERENCE.md  CONFIG_MIGRATION.md  EXPERIMENT_ANALYSIS_HANDOFF.md  MNPBEM_PORT_COVERAGE.md  PARITY_AUDIT.md  REGRESSION_ACCEPTANCE.md
examples/: advanced_dimer_cube.yaml  advanced_monomer_cube.yaml  auag_dimer_sim.py  auag_dimer_str.py  connected_dimer_cube.yaml  core_shell_cube.yaml  core_shell_rod.yaml  core_shell_sphere.yaml  cube.yaml  dimer_baseline.yaml  dimer_core_shell_cube.yaml  dimer_field.yaml  dimer_iter.yaml  dimer_iter_hmatrix.yaml  dimer_iter_precond.yaml  dimer_multinode.yaml  dimer_nonlocal.yaml  dimer_nonlocal_schur.yaml  dimer_smoke.yaml  dimer_sphere.yaml  dimer_substrate.yaml  dimer_vram_share.yaml  dimer_with_eigenmode.yaml  dipole_substrate.yaml  eels_substrate.yaml  ellipsoid.yaml  fano_anal.py  from_shape.yaml  large_mesh_hmatrix.yaml  large_mesh_multinode.yaml  large_mesh_vram_share.yaml  nonlocal_iter_schur.yaml  rod.yaml  rod_dipole.yaml  rod_eels.yaml  sphere_cluster.yaml  sphere_dipole.yaml  sphere_dipole_stat.yaml  sphere_eels.yaml  sphere_eels_stat.yaml  (+11 more)
pbs_scripts/: README.md  multi_node_2.pbs  multi_node_4.pbs  single_node_gpu.pbs
postprocess/: __init__.py  postprocess.py
pymnpbem_simulation/: auto_detect.py  cli.py  config.py  env_setup.py  sigma_cache.py  util.py
(+904 files in other folders)
