[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymnpbem_simulation"
version = "0.1.0"
description = "Python wrapper for MNPBEM electromagnetic simulations (replaces MATLAB code-generation pipeline)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yoo Jongkuk", email = "yoojk1025@gmail.com" }
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.10",
    "pandas>=2.3",
    "pyyaml>=6.0",
    "python-box>=7.3",
    "tqdm>=4.67",
    "h5py>=3.12",
    "scikit-learn>=1.7",
    "lmfit>=1.3",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.3"]
mpi = ["mpi4py>=4.0"]
plotly = ["plotly>=6.5"]
notebook = ["jupyter>=1.1"]
dev = ["pytest>=8.3", "pytest-cov>=5.0"]

[project.scripts]
pymnpbem-sim = "pymnpbem_simulation.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymnpbem_simulation*"]
